feat: add default notebook for local API
